finally fixed the stupid x-overflow property that was causing elements to not be centered.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: visible;
 }
 
 body {
@@ -32,6 +32,7 @@ body {
 * {
   padding: 0;
   margin: 0;
+  max-width: 100vw;
 }
 
 a {
