--- a/src/app/styles/ArticleGrid.css
+++ b/src/app/styles/ArticleGrid.css
@@ -5,9 +5,10 @@
     align-content: center;
     justify-self: center;
     align-self: center;
-    column-gap: 3vw;
+    column-gap: 2vw;
     row-gap: 3vw;
     margin-bottom: 10vh;
+    max-width: 100%;
 }
 
 @media (max-width: 700px) {
@@ -15,9 +16,10 @@
         grid-template-columns: 1fr;
         justify-content: center;
         align-content: center;
-        column-gap: 3vw;
+        column-gap: 2vw;
         row-gap: 3vw;
         margin: 0px;
+        max-width: 100%;
     }
 }
 
@@ -26,8 +28,9 @@
         grid-template-columns: 1fr 1fr 1fr;
         justify-content: center;
         align-content: center;
-        column-gap: 3vw;
+        column-gap: 2vw;
         row-gap: 3vw;
         margin: 0px;
+        max-width: 100%;
     }
 }
