--- a/src/app/styles/Body.css
+++ b/src/app/styles/Body.css
@@ -7,4 +7,5 @@
     justify-self: center;
     align-self: center;
     margin: 0px;
+    max-width: 100%;
 }
